# entrust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: check.yml  publish.yml
entrust/: Cargo.toml  extern-ent.nu
entrust-agent/: Cargo.toml  README.md
entrust-agent/examples/: client.rs  server.rs
entrust-agent/src/: client.rs  env.rs  lib.rs  server.rs
entrust-agent/src/server/: event.rs  request.rs
entrust-agent/tests/: age_identity_test.rs
entrust-core/: Cargo.toml  README.md
entrust-core/src/: backend.rs  generate.rs  git.rs  lib.rs  resolve.rs
entrust-core/src/backend/: age.rs  gpg.rs
entrust-core/src/backend/age/: agent.rs
entrust-core/tests/: resolve_test.rs
entrust-dialog/: Cargo.toml  README.md
entrust-dialog/examples/: input.rs  select.rs  yes_no.rs
entrust-dialog/src/: dialog.rs  input.rs  select.rs  theme.rs  yes_no.rs
entrust-dialog/src/input/: completions.rs  confirmation.rs  cursor.rs  validator.rs
entrust-dialog/src/select/: filter.rs  widget.rs
entrust/src/: alias.rs  animation.rs  command.rs  dialog.rs  init.rs  key.rs  lib.rs  theme.rs  tracing.rs
entrust/src/command/: add.rs  autotype.rs  clip.rs  completions.rs  edit.rs  generate.rs  get.rs  git.rs  identity.rs  move.rs  remove.rs  shell.rs
par-agent/: Cargo.toml
par-agent/examples/: client.rs  server.rs
par-agent/src/: client.rs  lib.rs  server.rs
par-agent/tests/: age_identity_test.rs
par-cli/: Cargo.toml  build.rs
par-cli/src/: alias.rs  animation.rs  autotype.rs  command.rs  dialog.rs  init.rs  key.rs  lib.rs  main.rs  theme.rs  tracing.rs  tree.rs
par-cli/src/command/: add.rs  autotype.rs  clear_clipboard.rs  edit.rs  generate.rs  get.rs  identity.rs  move.rs  remove.rs  shell.rs
par-cli/src/command/generate/: animation.rs  parse.rs
par-core/: .gitignore  Cargo.toml  build.rs
par-core/src/: backend.rs  generate.rs  lib.rs  resolve.rs
par-core/src/backend/: age.rs  gpg.rs
par-core/src/backend/age/: agent.rs  identity.rs  no_agent.rs
par-core/tests/: resolve_test.rs
par-dialog/: Cargo.toml
par-dialog/examples/: input.rs  select.rs  yes_no.rs
par-dialog/src/: dialog.rs  input.rs  lib.rs  select.rs  theme.rs  yes_no.rs
par-dialog/src/input/: completions.rs  confirmation.rs  cursor.rs  mask.rs  prompt.rs  validator.rs  widget.rs
par-dialog/src/select/: filter.rs  widget.rs
src/: backend.rs  command.rs  error.rs  generated.rs  git.rs  init.rs  lib.rs  main.rs  resolve.rs  store.rs  theme.rs  tree.rs
src/backend/: age.rs  gpg.rs
src/command/: add.rs  clear_clipboard.rs  completions.rs  edit.rs  generate.rs  get.rs  move.rs  remove.rs
src/command/generate/: animation.rs  parse.rs
