[workspace]
members = ["entrust", "entrust-core", "entrust-dialog", "entrust-agent"]
default-members = ["entrust"]
resolver = "3"

[workspace.package]
authors = ["hepptho"]
version = "0.5.1"
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/hepptho/entrust"
homepage = "https://github.com/hepptho/entrust"
license = "MIT"

[profile.dev.package."*"]
debug = false

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "debuginfo"

[workspace.dependencies]
itertools = "0.14"
rand = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
