[package]
name = "entrust-agent"
version = "0.1.2"
edition = "2024"
description = "A gpg-agent-like background agent for entrust"

authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
bincode = "1.3"
interprocess = "2.2"
serde = { version = "1.0", features = ["derive"] }
