[package]
name = "entrust-agent"
edition = "2024"
description = "A gpg-agent-like background agent for entrust"

authors.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
interprocess = "2.2"
paste = "1.0"
rkyv = "0.8"
