[package]
name = "entrust-agent"
description = "A gpg-agent-like background agent for entrust"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
interprocess = "2.3"
paste = "1.0"
rkyv = "0.8"
