[package]
name = "entrust-core"
description = "En-/decryption and password store management for entrust"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
agent = ["dep:entrust-agent"]

[dependencies]
entrust-agent = { path = "../entrust-agent", version = "0.6.0", optional = true }

anyhow = { workspace = true }
itertools = { workspace = true }
pathdiff = "0.2"
rand = { workspace = true }
walkdir = "2.5"

[dev-dependencies]
tempfile = { workspace = true }
