[package]
name = "entrust-dialog"
version = "0.2.1"
edition = "2024"
rust-version = "1.85" # for 2024 edition
description = "Interactive terminal dialogs for entrust"

authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
fuzzy-matcher = "0.3"
ratatui = "0.29"
tracing = { workspace = true }
