[package]
name = "entrust-dialog"
edition = "2024"
rust-version = "1.85" # for 2024 edition
description = "Interactive terminal dialogs for entrust"

authors.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
fuzzy-matcher = "0.3"
ratatui = "0.30"
tracing = { workspace = true }
