[package]
name = "entrust-dialog"
description = "Interactive terminal dialogs for entrust"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
fuzzy-matcher = "0.3"
ratatui = "0.30"
tracing = { workspace = true }
