[package]
name = "entrust"
version = "0.3.0"
edition = "2024"
rust-version = "1.85" # for 2024 edition
default-run = "ent"
readme = "../README.md"
categories = ["command-line-utilities"]
keywords = ["cli"]
description = "A CLI password manager"

authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ent"

[[bin]]
name = "ent-agent"
path = "src/bin/ent_agent.rs"
required-features = ["agent"]

[features]
agent = ["entrust-core/agent", "dep:entrust-agent"]
autotype = ["dep:enigo"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
entrust-agent = { path = "../entrust-agent", version = "0.2.2", optional = true }
entrust-core = { path = "../entrust-core", version = "0.2.2" }
entrust-dialog = { path = "../entrust-dialog", version = "0.3.0" }

anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
color-print = "0.3"
const_format = "0.2"
copypasta = "0.10"
enigo = { version = "0.3", optional = true }
itertools = { workspace = true }
rand = { workspace = true }
shlex = "1.3"
termtree = "0.5.0"
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }

[dev-dependencies]
tempfile = "3.13"
