[package]
name = "par"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "par"

[dependencies]
par-core = { path = "../par-core" }
par-dialog = { path = "../par-dialog" }

anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
color-print = "0.3"
copypasta = "0.10"
crossterm = "0.27"
env_logger = "0.11"
itertools = { workspace = true }
log = "0.4"
once_cell = { workspace = true }
rand = { workspace = true }
termtree = "0.5.0"
