[package]
name = "par-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.80" # for LazyLock
default-run = "par"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "par"

[[bin]]
name = "par-agent"
path = "src/bin/par_agent.rs"
required-features = ["agent"]

[features]
agent = ["par-core/agent", "dep:par-agent"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
par-agent = { path = "../par-agent", optional = true }
par-core = { path = "../par-core" }
par-dialog = { path = "../par-dialog" }

anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
color-print = "0.3"
const_format = "0.2"
copypasta = "0.10"
enigo = "0.2"
itertools = { workspace = true }
rand = { workspace = true }
shlex = "1.3"
termtree = "0.5.0"
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }

[dev-dependencies]
tempfile = "3.13"
