[package]
name = "par-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = { workspace = true }
log = "0.4"
pathdiff = "0.2"
rand = "0.8"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
